# opentakserver_docker

./: .env.template  .gitignore  Dockerfile  Dockerfile2  docker-compose.yaml  generate-certs.sh  pyproject.toml
opentakserver/: __init__.py
