[tool.poetry]
name = "OpenTAKServer"
version = "0.0.0"
description = "A server for ATAK, WinTAK, and iTAK"
authors = ["OpenTAKServer <opentakserver@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/brian7704/OpenTAKServer"
documentation = "https://docs.opentakserver.io"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
adsbxcot = "6.0.4"
androguard = "4.1.2"
aiscot = "5.2.1"
beautifulsoup4 = "4.12.3"
colorlog = "6.9.0"
datetime = "5.5"
python-ffmpeg = "2.0.12"
flask = "3.1.0"
flask-apscheduler = "1.13.1"
flask-cors = "5.0.0"
flask-migrate = "4.0.7"
Flask-Security-Too = {version="5.5.2", extras=["common", "mfa"]}
flask-socketio = "5.4.1"
flask-sqlalchemy = "3.1.1"
eventlet = "0.37.0"
gevent = "24.11.1"
lastversion = "^3.5.1"
lxml = "5.3.0"
meshtastic = "2.5.4"
pika = "1.3.2"
poetry-dynamic-versioning = "1.4.1"
protobuf = "5.28.3"
psutil = "6.1.0"
pyfiglet = "1.0.2"
pygc = "1.3.0"
PyJWT = "2.9.0"
pytak = "6.3.2"
pytest = "8.3.3"
pytest-cov = "6.0.0"
python-socketio = {version="5.11.4", extras=["client", "websocket_client", "asyncio_client"]}
pyOpenSSL = "24.2.1"
pyotp = "2.9.0"
PyYAML = "6.0.2"
sqlalchemy = "2.0.36"
sqlalchemy-utils = "0.41.2"
tldextract = "5.1.2"
unishox2-py3 = "1.0.0"
# Fixed dependency versions to resolve conflicts
cachecontrol = "0.13.1"
attrs = "23.1.0"
packaging = "24.0"  # Updated to meet meshtastic requirement
virtualenv = "20.29.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = false
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
opentakserver = "opentakserver.app:create_app"

